--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -1,16 +1,18 @@
 .main {
   min-height: 80vh;
-  width: 60vw;
-  background-color: beige;
+  width: 50vw;
+  background-color: rgb(255, 242, 242);
   border: 0.2rem solid black;
+  border-radius: 1vw;
+
   margin: 0 auto;
   margin-top: 2em;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
 
 .main_title {
-  height: 20px;
+  margin: 0 auto;
 }
 
 .main_title__header {
@@ -23,5 +25,42 @@
 }
 
 .main_bayan {
+  margin: 2rem 2rem 2rem 2rem ;
+  display: flex;
+  flex-direction: row;
+}
 
+.main_bayan_lines {
+  /* display: flex; */
+  width: 100%;
+
+}
+
+.main_bayan_lines__mem {
+  display: flex;
+  /* width: 100%; */
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.5em;
+  font-weight: 500;
+  border: 1px solid green;
+  border-radius: 0.4vw;
+
+  background-image: url('./pic/plus.png');
+  background-repeat: no-repeat;
+  background-size: 1.5rem;
+  background-position: right top;
+
+}
+
+.main_bayan_lines_pic {
+  width: 100%;
+  height: 100%;
+  display:none;
+}
+
+.main_bayan_lines__mem:hover {
+  background-image: url('./pic/cross.png');
+  height: 20rem;
 }
