--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -43,10 +43,10 @@
 }
 
 .main_bayan_lines__mem {
-  /* display: flex; */
+  display: flex;
   height: 3rem;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   font-family: 'Courier New', Courier, monospace;
   font-size: 1.5em;
   font-weight: 500;
@@ -61,7 +61,7 @@
 }
 
 .main_bayan_lines_pic {
-  width: var(--size);
+  /* width: var(--size); */
   height: var(--size);
   margin: 0 auto;
 }
